@@ -108,7 +108,7 @@ public class CallRecordManagementView extends Div {
                     long hours = totalSeconds / 3600;
                     long minutes = (totalSeconds % 3600) / 60;
                     long seconds = totalSeconds % 60;
-                    return String.format("%d:%02d:%02d", hours, minutes, seconds);
+                    return "%d:%02d:%02d".formatted(hours, minutes, seconds);
                 })
                 .setHeader("Duración");
     }
